--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "less.js": "~1.7.5"
+    "less.js": "~1.7.5",
+    "lightbox2": "~2.7.1"
   }
 }
